# ETL

./: README.md
etl/: .env.example  .gitignore  README.md  docker-compose.yml  etl_conf.yml  pyproject.toml
etl/app/: Dockerfile  requirements.txt
etl/app/config/: settings.py  urls.py
etl/app/config/components/: database.py
etl/app/movies/: admin.py  models.py
etl/app/movies/api/v1/: serializers.py  urls.py  views.py
etl/app/movies/locale/en/LC_MESSAGES/: django.po
etl/app/movies/locale/ru/LC_MESSAGES/: django.po
etl/app/movies/migrations/: 0001_initial.py  0002_add_indexes.py  0003_add_choices_to_type_film_work.py
etl/configs/: site.conf
etl/pg_to_elastc/: el_index.py  extractor.py  loader.py  main.py  models.py  requirements.txt  settings.py  state.py
etl/pg_to_elastc/db/: pg_db.py
etl/pg_to_elastc/sql_query/: genre.sql  movies.sql  person.sql
etl/pg_to_elastc/utility/: backoff.py
