[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["blarcher"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
elasticsearch = "7.17.1"
loguru = "^0.6.0"
psycopg2-binary = "2.9.3"
pydantic = "^1.9.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
